--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,6 +1,8 @@
-<div class="messages-container" *ngIf="showMessages">
-    <div class="message" *ngFor="let error of errors">
-        {{error}}
+<ng-container  *ngIf="(errors$ | async) as errors">
+    <div class="messages-container" *ngIf="showMessages">
+        <div class="message" *ngFor="let error of errors">
+            {{error}}
+        </div>
+        <mat-icon class="close" click="onClose()">Close</mat-icon>
     </div>
-    <mat-icon class="close" click="onClose()">Close</mat-icon>
-</div>
+</ng-container>
